<resources>
    <string name="app_name">CookEasy</string>
    <string name="recipes">Рецепты</string>
    <string name="add_recipe">Добавить рецепт</string>
    <string name="settings">Настройки</string>
    <string name="search_hint">Поиск по блюду…</string>
    <string name="cooking_time">Время приготовления</string>
    <string name="ingredients">Ингредиенты</string>
    <string name="ingredient">Ингредиент</string>
    <string name="count">Количество</string>
    <string name="units">Единицы</string>
    <string name="select_unit">Выберите единицу измерения</string>
    <string name="select_ingredient">Выберите ингредиент</string>
    <string name="ok">OK</string>
    <string name="add_ingredient">Добавить ингредиент</string>
    <string name="apply">Применить</string>
    <string name="error">Ошибка</string>
    <string name="filter_error">Необходимо заполнить все поля! Если Вы не заполнили поля в ингредиентах, то можно
        удалить эти ингредиенты.
    </string>
    <string name="filter_range_error">Ошибка! Неправильные значения в диапазоне или заполните пустые выделенные поля.
    </string>
    <string name="filter_calories_from_error">Начальное значение калорий должно быть меньше или равно конечному</string>
    <string name="filter_calories_to_error">Конечное значение калорий должно быть больше или равно начальному</string>
    <string name="filter_servings_from_error">Начальное количество персон должно быть меньше или равно конечному</string>
    <string name="filter_servings_to_error">Конечное количество персон должно быть больше или равно начальному</string>
    <string name="sort_by">Сортировать по</string>
    <string name="dish_name">Название блюда</string>
    <string name="upload_photo">Загрузить фото</string>
    <string name="upload_note">* Желательно использовать фото альбомного формата</string>
    <string name="change">Изменить</string>
    <string name="dish_description">Описание блюда</string>
    <string name="choose_time">Выберите время…</string>
    <string name="choose_photo">Выберите фото</string>
    <string name="steps">Шаги</string>
    <string name="add_step">Добавить шаг</string>
    <string name="remove_last_step">Удалить последний шаг</string>
    <string name="description_hint">Опишите шаг</string>
    <string name="delete">Удалить</string>
    <string name="edit">Редактировать</string>
    <string name="add">Добавить</string>
    <string name="sort">Сортировка</string>
    <string name="filters">Фильтры</string>
    <string name="clear">Очистить</string>
    <string name="cancel">Отмена</string>
    <string name="enter_count">Введите количество…</string>
    <string name="enter_ingredient_count_error">Введите количество ингредиента</string>
    <string name="add_ingredient_error">Ошибка! Вы должны заполнить все поля перед добавление ингредиента.</string>
    <string name="add_ingredient_image_error">Ошибка! Вы должны добавить фотографию блюда.</string>
    <string name="add_ingredient_ingredients_error">Ошибка! Вы должны добавить хотя бы один ингредиент.</string>
    <string name="add_ingredient_steps_error">Ошибка! Вы должны добавить хотя бы один шаг.</string>
    <string name="add_ingredient_steps_description_error">Ошибка! Вы должны заполнить поле описания во всех шагах.
    </string>
    <string name="enter_dish">Введите название блюда…</string>
    <string name="enter_description">Введите описание…</string>
    <string name="add_recipe_error">Ошибка! Перед добавлением рецепта заполните все поля.</string>
    <string name="enter_dish_error">Введите название блюда</string>
    <string name="enter_description_error">Введите описание</string>
    <string name="choose_time_error">Выберите время</string>
    <string name="from">От:</string>
    <string name="to">До:</string>
    <string name="time_error_message">Время должно быть в диапазоне от меньшего до большего значения.</string>
    <string name="enter_calories">Введите количество калорий…</string>
    <string name="enter_calories_error">Введите количество калорий</string>
    <string name="enter_servings">Введите количество персон…</string>
    <string name="enter_servings_error">Введите количество персон</string>
    <string name="dish_type">Тип блюда</string>
    <string name="select_dish_type">Выберите тип блюда…</string>
    <string name="select_dish_type_no_selection">Не выбран</string>
    <string name="select_dish_type_title">Выберите тип блюда</string>
    <string name="whooops">Ууупс</string>
    <string name="no_internet_connection_message">Нет интернет соединения.\nПожалуйста проверьте настройки подключения.
    </string>
    <string name="refresh">Обновить</string>
    <string name="retry">Попробовать еще раз</string>
    <string name="retry2">Повторить</string>
    <string name="remove_dialog_title">Удалить рецепт</string>
    <string name="remove_dialog_message">Вы уверены, что хотите удалить рецепт?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="no_connection_snackbar_message">Нет интернет соединения</string>
    <string name="title_timeout_preference">Тайм-аут</string>
    <string name="summary_timeout_preference">Продолжительность тайм-аута в милисекундах при отсутствии подключения
    </string>
    <string name="title_edit_unit_preference">Единицы измерения</string>
    <string name="summary_edit_unit_preference">Просмотр, добавление, редактирование и удаление единиц измерения
    </string>
    <string name="title_deviation_preference">Отклонение</string>
    <string name="summary_deviation_preference">На сколько процентов количество ингредиента отклоняется от указанного
        при поиске рецепта по приблизительному количеству
    </string>
    <string name="title_ingredient_preference">Ингредиенты</string>
    <string name="summary_ingredient_preference">Просмотр, добавление, редактирование и удаление ингредиентов</string>
    <string name="search">Поиск</string>
    <string name="edit_unit_activity_title">Единицы измерения</string>
    <string name="edit_unit_search_hint">Введите единицу…</string>
    <string name="edit_record_error_message">Ошибка! Вы должны заполнить поле.</string>
    <string name="unit_delete_confirmation">Вы уверены, что хотите удалить эту единицу измерения?</string>
    <string name="ingredient_delete_confirmation">Вы уверены, что хотите удалить этот ингредиент?</string>
    <string name="dish_type_delete_confirmation">Вы уверены, что хотите удалить этот тип блюда?</string>
    <string name="enter_unit">Введите единицу измерения…</string>
    <string name="enter_unit_error">Введите единицу измерения</string>
    <string name="delete_unit_error_message">Невозможно удалить единицу измерения, т.к. она уже используется в рецептах.
    </string>
    <string name="delete_ingredient_error_message">Невозможно удалить ингредиент, т.к. он уже используется в рецептах.
    </string>
    <string name="delete_dish_type_error_message">Невозможно удалить тип блюда, т.к. он уже используется в рецептах.
    </string>
    <string name="enter_ingredient">Введите ингредиент…</string>
    <string name="enter_ingredient_error">Введите ингредиент</string>
    <string name="range_time_error_message">Вы должны выбрать начальное время в диапазоне</string>
    <string name="calories">Калории</string>
    <string name="servings">Количество персон</string>
    <string name="dish_types">Типы блюд</string>
    <string name="summary_dish_type_preference">Просмотр, добавление, редактирование и удаление типов блюд</string>
    <string name="enter_dish_type">Введите тип блюда…</string>
    <string name="enter_dish_type_error">Введите тип блюда</string>
    <string name="share">Поделиться</string>
    <string name="share_using">Поделиться с помощью</string>

    <string-array name="sort_options">
        <item>Названию блюда (возрастание)</item>
        <item>Названию блюда (убывание)</item>
        <item>Оценке (возрастание)</item>
        <item>Оценке (убывание)</item>
        <item>Времени приготовления (возрастание)</item>
        <item>Времени приготовления (убывание)</item>
    </string-array>

    <string-array name="time_options">
        <item>Точно</item>
        <item>Диапазон</item>
    </string-array>

    <string-array name="ingredient_count_options">
        <item>Точно</item>
        <item>Приблизительно</item>
        <item>Диапазон</item>
    </string-array>
</resources>
