<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="20dp"
    android:showDividers="middle"
    android:divider="@drawable/divider10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_error_message"
        android:textColor="@android:color/holo_red_dark"
        android:text="@string/add_ingredient_error"
        android:layout_marginBottom="20dp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingredient" />

    <com.toptoche.searchablespinnerlibrary.SearchableSpinner
        android:id="@+id/sp_ingredient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        tools:ignore="LabelFor" />

    <Spinner
        android:id="@+id/sp_ingredient_count_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/ingredient_count_options" />

    <TextView
        android:id="@+id/tv_from"
        android:visibility="gone"
        android:text="@string/from"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_from_ingredient_count"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_from_ingredient_count"
            android:inputType="number"
            android:hint="@string/enter_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_to"
        android:visibility="gone"
        android:text="@string/to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_to_ingredient_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_to_ingredient_count"
            android:inputType="number"
            android:hint="@string/enter_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/units" />

    <com.toptoche.searchablespinnerlibrary.SearchableSpinner
        android:id="@+id/sp_unit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="LabelFor" />

</LinearLayout>